# radio

./: README.md  index.html  package-lock.json  package.json
public/: splashscreen.html
src/: App.jsx  CurrentStation.jsx  Favorites.jsx  Header.jsx  Infos.jsx  Loader.jsx  PageHeader.jsx  Search.jsx  StationsList.jsx  Visualizer.jsx  index.jsx  player.jsx  station.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  fanarttv.rs  lib.rs  main.rs  musicbrainz.rs  player.rs  tuner.rs  wikipedia.rs
