[package]
name = "radio"
version = "0.1.0"
description = "An Internet Radio Player"
authors = ["alr51"]
license = ""
repository = "https://github.com/alr51/radio"
edition = "2021"

[lib]
name = "radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1.0.69"
gstreamer = "0.20.2"
trust-dns-resolver = "0.22.0"
reqwest = { version = "0.11.14", features = ["json"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
